--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <h1>Chris Mundy</h1>
     <p>Welcome to my website!</p>
-    <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
+    <img src="./Resources/Images/JDVance.png" />
   </body>
 
 </html>
