--- a/index.html
+++ b/index.html
@@ -1,13 +1,22 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <title>
+      Chris Mundys' Web Page
+    </title>
     <link rel="stylesheet" href="./Resources/CSS/index.css">
   </head>
 
   <body>
-    <h1>Chris Mundy</h1>
-    <p>Welcome to my website!</p>
-    <img src="./Resources/Images/JDVance.png" />
+    <div class="Nav-bar">
+      <h1 Class="Title-name">Chris Mundy</h1>
+      <ul class="Nav-bar-List">
+        <li>About</li>
+        <li>Projects</li>
+        <li>Experience</li>
+        <li>Contact</li>
+      </ul>
+    </div>
   </body>
 
 </html>
