--- a/index.html
+++ b/index.html
@@ -11,11 +11,18 @@
     <div class="Nav-bar">
       <h1 Class="Title-name">Chris Mundy</h1>
       <ul class="Nav-bar-List">
-        <li>About</li>
-        <li>Projects</li>
-        <li>Experience</li>
-        <li>Contact</li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#contact">Contact</a></li>
+        <li><a href="#car">Dads Car</a></li>
       </ul>
+    </div>
+    <div id="about">
+      <h1>About me</h1>
+    </div>
+    <div id="projects">
+      <h1>My Projects</h1>
     </div>
   </body>
 
